--- a/servises/templates/servises/clients/client_list.html
+++ b/servises/templates/servises/clients/client_list.html
@@ -4,66 +4,40 @@
 {% block content %}
 
 {% include 'servises/includes/inc_nav_bar.html' %}
-
-<body class="bg-light">
-
-<main class="container">
-    <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm">
-        <div class="lh-1">
-            <h1 class="h6 mb-0 text-white lh-1">Bootstrap</h1>
-            <small>Since 2011</small>
+    <body class="bg-light">
+    <main class="container">
+         <div class="my-3 p-3 bg-body rounded shadow-sm">
+            <a class="btn btn-primary" href="{% url 'servises:client_create' %}">Добавить клиента</a>
         </div>
-    </div>
+        <div class="my-3 p-3 bg-body rounded shadow-sm">
+            <h6 class="border-bottom pb-2 mb-0">Список клиентов</h6>
+            {% for object in object_list %}
+                {% if object.is_active %}
+                <div class="d-flex text-muted pt-3">
+                    <div class="row mb-6">
+                        <div class="col-6">
+                            <p class="pb-3 mb-0 small lh-sm border-bottom">
+                                <strong class="d-block text-black">{{ object.name }}</strong>
+                                <a class="text"> {{ object.email }}</a>
+                                <br>
+                                <a class="text"> {{ object.comment }}</a>
+                            </p>
+                        </div>
 
-    <div class="my-3 p-3 bg-body rounded shadow-sm">
-        <h6 class="border-bottom pb-2 mb-0">Список клиентов</h6>
-
-        {% for object in object_list %}
-        <div class="d-flex text-muted pt-3">
-            <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32"
-                 xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32"
-                 preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#007bff"/>
-                <text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text>
-            </svg>
-
-            <p class="pb-3 mb-0 small lh-sm border-bottom">
-                <strong class="d-block text-black">{{ object.name }}</strong>
-                <a class="text"> {{ object.email }}</a>
-                <br>
-                <a class="text"> {{ object.comment }}</a>
-            </p>
-        </div>
-        <small class="d-block text-end mt-3">
-            <a href="#">All updates</a>
-        </small>
-        {% endfor %}
-    </div>
-
-
-
-    <div class="my-3 p-3 bg-body rounded shadow-sm">
-        <h6 class="border-bottom pb-2 mb-0">Suggestions</h6>
-        <div class="d-flex text-muted pt-3">
-            <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32"
-                 xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32"
-                 preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#007bff"/>
-                <text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text>
-            </svg>
-
-            <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                <div class="d-flex justify-content-between">
-                    <strong class="text-gray-dark">Full Name</strong>
-                    <a href="#">Follow</a>
+                        <div class="row mb-6">
+                            <div class="col-12">
+                                <a class="btn btn-blue" href="{% url 'servises:client' object.pk %}">Подробно</a>
+                                <a class="btn btn-danger" href="{% url 'servises:client_delete' object.pk %}">Удалить</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <span class="d-block">@username</span>
-            </div>
+                <small class="d-block text-end mt-3">
+                    <a href="#">All updates</a>
+                </small>
+                {% endif %}
+            {% endfor %}
         </div>
-        <small class="d-block text-end mt-3">
-            <a href="#">All suggestions</a>
-        </small>
-    </div>
-</main>
+    </main>
 
 {% endblock %}
