--- a/servises/templates/servises/includes/inc_nav_bar.html
+++ b/servises/templates/servises/includes/inc_nav_bar.html
@@ -1,45 +1,51 @@
 <style>
-/* Кнопка выпадающего списка */
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
+    /* Кнопка выпадающего списка */
+    .drop {
+        background-color: #4CAF50;
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+    }
 
-/* Контейнер <div> - необходим для размещения выпадающего содержимого */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
+    /* Контейнер <div> - необходим для размещения выпадающего содержимого */
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
 
-/* Выпадающее содержимое (скрыто по умолчанию) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
+    /* Выпадающее содержимое (скрыто по умолчанию) */
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+    }
 
-/* Ссылки внутри выпадающего списка */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
+    /* Ссылки внутри выпадающего списка */
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
 
-/* Изменение цвета выпадающих ссылок при наведении курсора */
-.dropdown-content a:hover {background-color: #ddd;}
+    /* Изменение цвета выпадающих ссылок при наведении курсора */
+    .dropdown-content a:hover {
+        background-color: #ddd;
+    }
 
-/* Показать выпадающее меню при наведении курсора */
-.dropdown:hover .dropdown-content {display: block;}
+    /* Показать выпадающее меню при наведении курсора */
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
 
-/* Изменение цвета фона кнопки раскрывающегося списка при отображении содержимого раскрывающегося списка */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+    /* Изменение цвета фона кнопки раскрывающегося списка при отображении содержимого раскрывающегося списка */
+    .dropdown:hover .dropbtn {
+        background-color: #3e8e41;
+    }
 </style>
 
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Third navbar example">
@@ -52,24 +58,22 @@
 
         <div class="collapse navbar-collapse" id="navbarsExample03">
             <ul class="navbar-nav me-auto mb-2 mb-sm-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link active" href="#" data-bs-toggle="dropdown">Клиенты</a>
+                    <div class="dropdown-content">
+                        <a href="{% url 'servises:clients' %}">Клиенты</a>
+                        <a href="{% url 'servises:client_create' %}">Добавить</a>
+                    </div>
                 </li>
 
-                <div class="dropdown">
-                    <a class="drop" href="#" data-bs-toggle="dropdown">Блог</a>
-                    <div class="dropdown-content">
-                        <a href="{% url 'servises:start_page' %}">Блог</a>
-                        <a href="{% url 'servises:start_page' %}">Блог</a>
-                        <a href="{% url 'servises:start_page' %}">Блог</a>
-                    </div>
-                </div>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'admin:index' %}">Админка</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'servises:test_view' %}">ТЕСТ</a>
+                </li>
 
             </ul>
             <form>
