--- a/servises/templates/servises/main_page.html
+++ b/servises/templates/servises/main_page.html
@@ -31,6 +31,17 @@ body {
             </div> <!-- end service item -->
 
             <div class="col-sm-3">
+                <div class="service-item icon-effect-1 icon-orange icon-effect-1a last">
+                    <a href="{% url 'servises:setting_list' %}">
+                        <i class="hi-icon icon icon-Dollars"></i>
+                    </a>
+                    <h5 class="text-center">Настройки</h5>
+                    <div class="main-border orange"></div>
+                    <p class="text-center">Настройки рассылок</p>
+                </div>
+            </div>
+
+             <div class="col-sm-3">
                 <div class="service-item icon-effect-1 icon-violet icon-effect-1a">
                     <a href="#">
                         <i class="hi-icon icon icon-Umbrella"></i>
@@ -40,17 +51,6 @@ body {
                     <p class="text-center">Сообщения для рассылок</p>
                 </div>
             </div> <!-- end service item -->
-
-            <div class="col-sm-3">
-                <div class="service-item icon-effect-1 icon-orange icon-effect-1a last">
-                    <a href="#">
-                        <i class="hi-icon icon icon-Dollars"></i>
-                    </a>
-                    <h5 class="text-center">Настройки</h5>
-                    <div class="main-border orange"></div>
-                    <p class="text-center">Настройки рассылок</p>
-                </div>
-            </div>
 
             <div class="col-sm-3">
                 <div class="service-item icon-effect-1 icon-orange icon-effect-1a last">
