--- a/servises/templates/servises/main_page.html
+++ b/servises/templates/servises/main_page.html
@@ -43,7 +43,7 @@ body {
 
              <div class="col-sm-3">
                 <div class="service-item icon-effect-1 icon-violet icon-effect-1a">
-                    <a href="#">
+                    <a href="{% url 'servises:message_list' %}">
                         <i class="hi-icon icon icon-Umbrella"></i>
                     </a>
                     <h5 class="text-center">Рассылка</h5>
