--- a/servises/templates/servises/includes/inc_nav_bar.html
+++ b/servises/templates/servises/includes/inc_nav_bar.html
@@ -68,9 +68,9 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link active" href="#" data-bs-toggle="dropdown">Настройки</a>
+                    <a class="nav-link active" href="#" data-bs-toggle="dropdown">Рассылки</a>
                     <div class="dropdown-content">
-                        <a href="{% url 'servises:setting_list' %}">Настройки</a>
+                        <a href="{% url 'servises:setting_list' %}">Рассылки</a>
                         <a href="{% url 'servises:setting_create' %}">Добавить</a>
                     </div>
                 </li>
