--- a/servises/templates/servises/settings/settings_detail.html
+++ b/servises/templates/servises/settings/settings_detail.html
@@ -16,12 +16,13 @@
 
                 <h5 class="mb-1 text-muted">{{ names.status }}: {{ object.status }}</h5>
                 <h5 class="card-text mb-auto">{{ names.start }}: {{ object.date_mailing }}</h5>
-                <h5 class="card-text mb-auto">{{ names.end }}: {{ object.date_mailing }}</h5>
+                <h5 class="card-text mb-auto">{{ names.end }}: {{ object.date_end_mailing }}</h5>
 
                 <div class="row-12">
                     <div class="col-12">
                         <a class="btn btn-primary" href="{% url 'servises:setting_update' object.pk %}">Изменить</a>
                         <a class="btn btn-danger" href="{% url 'servises:setting_delete' object.pk %}">Удалить</a>
+                        <a class="btn btn-success" href="{% url 'servises:start_mailing' object.pk %}">Проверка</a>
                     </div>
                 </div>
             </div>
