--- a/servises/templates/servises/settings/settings_detail.html
+++ b/servises/templates/servises/settings/settings_detail.html
@@ -22,7 +22,7 @@
                     <div class="col-12">
                         <a class="btn btn-primary" href="{% url 'servises:setting_update' object.pk %}">Изменить</a>
                         <a class="btn btn-danger" href="{% url 'servises:setting_delete' object.pk %}">Удалить</a>
-                        <a class="btn btn-success" href="{% url 'servises:start_mailing' object.pk %}">Проверка</a>
+                        <a class="btn btn-success" href="{% url 'servises:start_mailing' object.pk %}">Запустить рассылку</a>
                     </div>
                 </div>
             </div>
