--- a/servises/templates/servises/includes/inc_nav_bar.html
+++ b/servises/templates/servises/includes/inc_nav_bar.html
@@ -50,7 +50,7 @@
 
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Third navbar example">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'servises:start_page' %}">Главная</a>
+        <a class="navbar-brand" href="{% url 'servises:main_page' %}">Главная</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
                 aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -88,7 +88,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'servises:test_view' %}">ТЕСТ</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'servises:log' %}">Логи</a>
                 </li>
 
             </ul>
