--- a/servises/templates/servises/main_page.html
+++ b/servises/templates/servises/main_page.html
@@ -54,7 +54,7 @@ body {
 
             <div class="col-sm-3">
                 <div class="service-item icon-effect-1 icon-orange icon-effect-1a last">
-                    <a href="#">
+                    <a href="{% url 'servises:log' %}">
                         <i class="hi-icon icon icon-DesktopMonitor"></i>
                     </a>
                     <h5 class="text-center">Логи</h5>
