--- a/servises/templates/servises/start_mailing.html
+++ b/servises/templates/servises/start_mailing.html
@@ -1,29 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Отлично</title>
+{% extends 'servises/base.html' %}
 
-    <style>
-        main div {
-            color: black;
-            width: 50%;
-            transform: translate(-50%, -50%);
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            padding: 20px;
-            resize: both;
-            overflow: auto;
-        }
-    </style>
+{% block content %}
 
-</head>
-<body>
-    <main>
-        <div>
-            <h1>{{ result }}</h1>
+    {% include 'servises/includes/inc_nav_bar.html' %}
+
+    <div class="container">
+        <div class="col-6">
+            <h1>
+                Рассылка запущена
+            </h1>
+
+            <a class="btn btn-success" href="{% url 'servises:setting_list' %}">Назад</a>
         </div>
-    </main>
-</body>
-</html>
+
+    </div>
+
+
+{% endblock %}
