--- a/servises/templates/servises/includes/inc_nav_bar.html
+++ b/servises/templates/servises/includes/inc_nav_bar.html
@@ -91,6 +91,23 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'servises:log' %}">Логи</a>
                 </li>
 
+                <li class="nav-item dropdown">
+                    {% if user.is_authenticated %}
+                        <a class="nav-link active" href="#" data-bs-toggle="dropdown">{{ user.email }}</a>
+                        <div class="dropdown-content">
+                            <a href="{% url 'users:logout' %}" >Выход</a>
+                        </div>
+
+
+                    {% else %}
+                        <a class="nav-link active" href="{% url 'users:login' %}">Вход</a>
+                    {% endif %}
+
+                    <div class="dropdown-content">
+                    </div>
+                </li>
+
+
             </ul>
             <form>
                 <input class="form-control" type="text" placeholder="Search" aria-label="Search">
