--- a/servises/templates/servises/includes/inc_nav_bar.html
+++ b/servises/templates/servises/includes/inc_nav_bar.html
@@ -96,6 +96,7 @@
                         <a class="nav-link active" href="#" data-bs-toggle="dropdown">{{ user.email }}</a>
                         <div class="dropdown-content">
                             <a href="{% url 'users:logout' %}" >Выход</a>
+                            <a href="{% url 'users:recovery' %}" >Сменить пароль</a>
                         </div>
 
 
