--- a/servises/templates/servises/messages/message_detail.html
+++ b/servises/templates/servises/messages/message_detail.html
@@ -10,11 +10,14 @@
                 <strong class="d-inline-block mb-2 text-primary">{{ object.theme }}</strong>
 
                 <h5 class="card-text mb-auto">{{ object.body }}</h5>
+                <h5 class="card-text mb-auto">{{ object.creator }}</h5>
 
                 <div class="row-12">
                     <div class="col-12">
                         <a class="btn btn-primary" href="{% url 'servises:message_update' object.pk %}">Изменить</a>
+                        {% if object.creator == user %}
                         <a class="btn btn-danger" href="{% url 'servises:message_delete' object.pk %}">Удалить</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
