--- a/servises/templates/servises/messages/message_list.html
+++ b/servises/templates/servises/messages/message_list.html
@@ -23,14 +23,16 @@
                             <div class="row mb-6">
                                 <div class="col-12">
                                     <a class="btn btn-blue" href="{% url 'servises:message_detail' object.pk %}">Подробно</a>
+                                    {% if object.creator == user %}
                                     <a class="btn btn-danger" href="{% url 'servises:message_delete' object.pk %}">Удалить</a>
+                                        {% endif %}
                                 </div>
                             </div>
                         </div>
                     </div>
 
                     <small class="d-block text-end mt-3">
-                        <a href="#">All updates</a>
+                        <a href="#">Менеджер {{ object.creator }}</a>
                     </small>
                 {% endif %}
             {% endfor %}
