--- a/servises/templates/servises/settings/settings_list.html
+++ b/servises/templates/servises/settings/settings_list.html
@@ -36,7 +36,7 @@
                     </div>
 
                     <small class="d-block text-end mt-3">
-                        <a href="#">All updates</a>
+                        <a href="#">Менеджер {{ object.creator }}</a>
                     </small>
                 {% endif %}
             {% endfor %}
