--- a/servises/templates/servises/clients/client_detail.html
+++ b/servises/templates/servises/clients/client_detail.html
@@ -15,7 +15,7 @@
                 <div class="row-12">
                 <div class="col-12">
                     <a class="btn btn-primary" href="{% url 'servises:client_update' object.pk %}">Изменить</a>
-                    {% if object.creator == user %}
+                    {% if object.creator == user or user.is_superuser%}
                     <a class="btn btn-danger" href="{% url 'servises:client_delete' object.pk %}">Удалить</a>
                     {% endif %}
                 </div>
