--- a/servises/templates/servises/messages/message_detail.html
+++ b/servises/templates/servises/messages/message_detail.html
@@ -14,8 +14,9 @@
 
                 <div class="row-12">
                     <div class="col-12">
+                        {% if object.creator == user or user.is_superuser %}
                         <a class="btn btn-primary" href="{% url 'servises:message_update' object.pk %}">Изменить</a>
-                        {% if object.creator == user %}
+
                         <a class="btn btn-danger" href="{% url 'servises:message_delete' object.pk %}">Удалить</a>
                         {% endif %}
                     </div>
