--- a/servises/templates/servises/settings/settings_detail.html
+++ b/servises/templates/servises/settings/settings_detail.html
@@ -20,9 +20,20 @@
 
                 <div class="row-12">
                     <div class="col-12">
+                    {% if object.creator == user  or user.is_superuser %}
                         <a class="btn btn-primary" href="{% url 'servises:setting_update' object.pk %}">Изменить</a>
                         <a class="btn btn-danger" href="{% url 'servises:setting_delete' object.pk %}">Удалить</a>
-                        <a class="btn btn-success" href="{% url 'servises:start_mailing' object.pk %}">Запустить рассылку</a>
+                    {% endif %}
+                        {% if object.status == 'Активна' %}
+                            <a class="btn btn-success" href="{% url 'servises:end_mailing' object.pk %}">Остановить рассылку</a>
+                        {% elif object.status == 'Активирована' %}
+                            <h3>Рассылка активирована<br>Ждет своего времени</h3>
+                            <a class="btn btn-success" href="{% url 'servises:end_mailing' object.pk %}">Отменить рассылку</a>
+                        {% else %}
+                            {% if object.creator == user %}
+                                <a class="btn btn-success" href="{% url 'servises:start_mailing' object.pk %}">Запустить рассылку</a>
+                            {% endif %}
+                        {% endif %}
                     </div>
                 </div>
             </div>
