--- a/servises/templates/servises/settings/settings_list.html
+++ b/servises/templates/servises/settings/settings_list.html
@@ -29,7 +29,9 @@
                             <div class="row mb-6">
                                 <div class="col-12">
                                     <a class="btn btn-blue" href="{% url 'servises:setting_detail' object.pk %}">Подробно</a>
-                                    <a class="btn btn-danger" href="{% url 'servises:setting_detail' object.pk %}">Удалить</a>
+                                    {% if object.creator == user  or user.is_superuser %}
+                                        <a class="btn btn-danger" href="{% url 'servises:setting_delete' object.pk %}">Удалить</a>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
