--- a/servises/templates/servises/start_mailing.html
+++ b/servises/templates/servises/start_mailing.html
@@ -7,7 +7,7 @@
     <div class="container">
         <div class="col-6">
             <h1>
-                Рассылка запущена
+                {{ result }}
             </h1>
 
             <a class="btn btn-success" href="{% url 'servises:setting_list' %}">Назад</a>
