--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -14,7 +14,7 @@
                 <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
                         <strong class="d-inline-block mb-2 text-primary">{{ object.author }}</strong>
-                        <h3 class="mb-0">{{ object.title }}</h3>
+                        <h3 class="mb-0">{{ objects.title }}</h3>
                         <div class="mb-1 text-muted">{{ object.date }}</div>
                         <p class="card-text mb-auto">{{ object.body }}</p>
                         {% if object.author == user %}
