--- a/servises/templates/servises/includes/inc_nav_bar.html
+++ b/servises/templates/servises/includes/inc_nav_bar.html
@@ -95,6 +95,10 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'blog:list' %}">Блог</a>
                 </li>
 
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'servises:test' %}">Test</a>
+                </li>
+
                 <li class="nav-item dropdown">
                     {% if user.is_authenticated %}
                         <a class="nav-link active" href="#" data-bs-toggle="dropdown">{{ user.email }}</a>
